--- a/pages/admin/admin.wxss
+++ b/pages/admin/admin.wxss
@@ -1,11 +1,14 @@
 /* miniprogram/pages/admin/admin.wxss */
 .admint{
   margin: 0px;
-  height: 70px;
-  /* display: ;
+  width: 100%;
+  height: 100px;
+  display: flex;
   align-items: center;
-  justify-content: center; */
-  background-color: #312e2e
+  
+
+  flex-direction: row;
+  background-color: #222121
   
 }
 .img{
@@ -14,7 +17,8 @@
   background-color: #cccccc;
   height: 50px;
   width: 50px;
-  margin-top: 10px;
+  display: flex;
+  align-content: center;
 
 }
 .lab{
@@ -23,4 +27,5 @@
   font-size: 30px;
   text-shadow: 18px;
   text-align: right;
+  color: #ffffff;
 }
