--- a/pages/admin/admin.wxss
+++ b/pages/admin/admin.wxss
@@ -1,31 +1,101 @@
 /* miniprogram/pages/admin/admin.wxss */
+page{
+  height: 100%;
+}
+.conteiner{
+  background-color: #dbdbdb7a;
+  height: 100%;
+}
 .admint{
   margin: 0px;
   width: 100%;
   height: 100px;
   display: flex;
   align-items: center;
-  
-
   flex-direction: row;
-  background-color: #222121
+  background-color: #222121;
   
 }
 .img{
   float: left;
-  margin-left: 10%;
+  margin-left: 30px;
   background-color: #cccccc;
-  height: 50px;
-  width: 50px;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
   display: flex;
   align-content: center;
-
+  
 }
 .lab{
   float: right;
-  margin-right: 10%;
+  margin-left: 30%;
+  margin-right: 20px;
   font-size: 30px;
   text-shadow: 18px;
   text-align: right;
   color: #ffffff;
+}
+.lan{
+  width: 100%;
+  height: 10px;
+  background-color:  #222121;
+}
+.box{
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.all{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 100%;
+  
+}
+.gonggao{
+  width: 100%;
+  height: 150px;
+  margin-top: -20px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: -1px 0px 0px 0px #cccccc,
+              1px 0px 0px 0px #cccccc, 
+              0px 1px 0px 0px #cccccc;  
+}
+.gao1{
+  display: flex;
+  width: 100%;
+  height: 25%;
+  background-color: #ffffff;
+  border-radius: 8px 8px 0 0;
+  align-items: center;
+  box-shadow: 0px 1px 0px 0px #cccccc;
+}
+.gao1_lab{
+  margin-left: 5%;
+  font-size: 15px;
+  font-weight: bold;
+  /* font-family: "微软雅黑"； */
+  
+}
+.gao2{
+  display: flex;
+  width: 100%;
+  height: 75%;
+  
+}
+
+.btn1{
+  display: flex;
+  margin-top: 20px;
+  width: 100%;
+  height: 40px;
+  font-size: 13px;
+  align-items: center;
+  font-weight: bold;
+  /* font-family: "宋体"; */
 }
