--- a/pages/admin/admin.wxss
+++ b/pages/admin/admin.wxss
@@ -44,7 +44,7 @@ page{
 .box{
   display: flex;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 .all{
   display: flex;
@@ -98,4 +98,9 @@ page{
   align-items: center;
   font-weight: bold;
   /* font-family: "宋体"; */
+}
+.foot{
+  width: 100%;
+  height: 100%;margin-top: 50px;
+  background-color:  #222121;
 }
