--- a/pages/orderList/orderList.wxml
+++ b/pages/orderList/orderList.wxml
@@ -3,14 +3,14 @@
 <view class="page-wrapper ">
   <view class="bus-list js_bus_list ">
     <view data-supplierid="100020" data-key="" class="bus-list-item  ">
-      <view class="bus-time"> 08:25</view>
-      <view class="tobooking"> 预订 </view>
+      <view class="bus-time"> 2019/5/14 08:25</view>
+      <view class="tobooking"> 详情 </view>
       <view class="detail">
         <view class="detail1">
           <view class="start">
-            <text class="icon-circle s-icon1"></text>东莞市南城汽车客运站</view>
-          <view class="end">
-            <text class="icon-circle s-icon2"></text>连州</view>
+            <text class="icon-circle s-icon1"> 地址：</text>地址</view>
+          <!-- <view class="end">
+            <text class="icon-circle s-icon2"></text>连州</view> -->
         </view>
         <view class="tags">
           <view>
@@ -29,8 +29,8 @@
 
   <view class="bus-list js_bus_list ">
     <view data-supplierid="100020" data-key="" class="bus-list-item  ">
-      <view class="bus-time"> 08:25</view>
-      <view class="tobooking"> 预订 </view>
+      <view class="bus-time"> 2019/5/14 08:25</view>
+      <view class="tobooking"> 详情 </view>
       <view class="detail">
         <view class="detail1">
           <view class="start">
@@ -54,8 +54,8 @@
   </view>
   <view class="bus-list js_bus_list ">
     <view data-supplierid="100020" data-key="" class="bus-list-item  ">
-      <view class="bus-time"> 08:25</view>
-      <view class="tobooking"> 预订 </view>
+      <view class="bus-time">2019/5/14 08:25</view>
+      <view class="tobooking"> 详情 </view>
       <view class="detail">
         <view class="detail1">
           <view class="start">
