--- a/pages/admin/admin.wxss
+++ b/pages/admin/admin.wxss
@@ -73,6 +73,7 @@ page{
   background-color: #ffffff;
   border-radius: 8px 8px 0 0;
   align-items: center;
+  justify-items: center;
   box-shadow: 0px 1px 0px 0px #cccccc;
 }
 .gao1_lab{
