--- a/pages/admin/admin.wxss
+++ b/pages/admin/admin.wxss
@@ -9,7 +9,7 @@ page{
 .admint{
   margin: 0px;
   width: 100%;
-  height: 100px;
+  height: 20%;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -38,13 +38,13 @@ page{
 }
 .lan{
   width: 100%;
-  height: 10px;
+  height: 3%;
   background-color:  #222121;
 }
 .box{
   display: flex;
   width: 100%;
-  /* height: 100%; */
+  height: 67%;
 }
 .all{
   display: flex;
@@ -79,8 +79,8 @@ page{
 .gao1_lab{
   margin-left: 5%;
   font-size: 15px;
-  font-weight: bold;
-  /* font-family: "微软雅黑"； */
+  /* font-weight: bold; */
+  font-family: "微软雅黑"；
   
 }
 .gao2{
@@ -94,14 +94,15 @@ page{
   display: flex;
   margin-top: 20px;
   width: 100%;
-  height: 40px;
-  font-size: 13px;
+  height: 42px;
+  font-size: 14px;
   align-items: center;
-  font-weight: bold;
-  /* font-family: "宋体"; */
+  /* font-weight: bold; */
+  font-family: "微软雅黑";
 }
 .foot{
   width: 100%;
-  height: 100%;margin-top: 50px;
+  height: 10%;
+  /* margin-top: 50px; */
   background-color:  #222121;
 }
