--- a/pages/orderList/orderList.wxml
+++ b/pages/orderList/orderList.wxml
@@ -5,7 +5,7 @@
     <view data-supplierid="100020" data-key="" class="bus-list-item  ">
       <view class="bus-time"> 2019/5/14 08:25</view>
       <!-- tobooking监听 -->
-      <view class="tobooking" bindtap=''> 详情 </view>
+      <view class="tobooking" bindtap='orderin'> 详情 </view>
       <view class="detail">
         <view class="detail1">
           <view class="start">
