--- a/pages/admin/admin.wxml
+++ b/pages/admin/admin.wxml
@@ -30,7 +30,7 @@
           </view>
         </view>
 
-        <button class='btn1'>
+        <button class='btn1' bindtap='user'>
           <icon class='./iconfont/icon-geren:before'></icon>
           用户列表
         </button>
@@ -38,11 +38,11 @@
           <icon class='./iconfont/icon-dingdan:before'></icon>
           订单列表
         </button>
-        <button class='btn1'>
+        <button class='btn1' bindtap='staff'>
           <icon class='./iconfont/icon-tongxunlu:before'></icon>
           工人列表
         </button>
-        <button class='btn1'>
+        <button class='btn1' bindtap='tips'>
           <icon class='./iconfont/icon-lingdang:before'></icon>
           小知识
         </button>
