--- a/pages/staffList/staffList.wxss
+++ b/pages/staffList/staffList.wxss
@@ -21,7 +21,8 @@
 }
 .a{
    display: flex;
-   line-height: 150rpx;
+   /* line-height: 150rpx; */
+   align-items: center;
    justify-content: center;
 }
 .lab{
