--- a/pages/orderList/orderList.wxss
+++ b/pages/orderList/orderList.wxss
@@ -20,9 +20,18 @@
   top:0;
   
 }
+.ab{
+  width: 100%;
+  height: 100%;
+  display: flex;
+   /* line-height: 150rpx; */
+   align-items: center;
+   justify-content: center;
+}
 .a{
    display: flex;
-   line-height: 150rpx;
+   /* line-height: 150rpx; */
+   align-items: center;
    justify-content: center;
 }
 .lab{
