--- a/pages/tipsList/tipsList.wxss
+++ b/pages/tipsList/tipsList.wxss
@@ -19,10 +19,38 @@
   top:0;
   
 }
+.ab{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
 .a{
+  width: 80%;
    display: flex;
-   line-height: 150rpx;
+   /* line-height: 150rpx; */
+   align-items: center;
    justify-content: center;
+}
+.b{
+  width: 20%;
+  display: flex;
+   /* line-height: 150rpx; */
+   align-items: center;
+   justify-content: center;
+   font-size: 20px;
+   color: #ffffff;
+   /* box-shadow: 3px 3px 3px 3px #ffffff inset, */
+}
+.c{
+  display: flex;
+   line-height: 150rpx;
+   align-items: center;
+   justify-content: center;
+   font-size: 20px;
+   width: 80%;
+   height: 80%;
+   border: 1px solid #ffffff;
 }
 .lab{
   display: flex;
