--- a/pages/tipsList/tipsinfo/tipsinfo.wxml
+++ b/pages/tipsList/tipsinfo/tipsinfo.wxml
@@ -2,7 +2,7 @@
 <view class='conteiner'>
 
   <view class='admint'>
-    <label class='lab'>用户详情</label> 
+    <label class='lab'>订单详情</label> 
     
   </view>
 
@@ -12,9 +12,17 @@
       <view class='onid'>
         <view class='inorid'>
 
+          <label class='tex'>订单号:<text>1234567</text></label>
+
+          <label class='tex'>订单时间:<text>2019-5-21 15:00</text></label>
+
           <label class='tex'>用户ID:<text>0001</text></label>
 
           <label class='tex'>用户名称:<text>cwt</text></label>
+
+          <label class='tex'>工人ID:<text>0001</text></label>
+
+          <label class='tex'>工人名称:<text>cwt</text></label>
 
           <label class='tex'>联系方式:<text>15372095456</text></label>
 
@@ -30,8 +38,8 @@
 
   <view class='foot'>
     <view class='footer'>
-      <!-- <view class='glbtn' bindtap='glorder'>管理用户</view> -->
-      <view class='dlbtn' bindtap='delorder'>删除用户</view>
+      <view class='glbtn' bindtap='glorder'>管理订单</view>
+      <view class='dlbtn' bindtap='delorder'>删除订单</view>
     </view>
   </view>
 </view>
