--- a/pages/userList/userList.wxml
+++ b/pages/userList/userList.wxml
@@ -12,20 +12,22 @@
 
   <view class='box'>
     <view class="bus-list js_bus_list ">
-      <view data-supplierid="100020" data-key="" class="bus-list-item  ">
-        <view class="bus-time"> ID</view>
+
+    <block wx:for="{{items}}">
+      <view class="bus-list-item  ">
+        <view class="bus-time"> {{item.userid}}</view>
         <!-- tobooking监听 -->
-        <view class="tobooking" bindtap='orderin'> 详情 </view>
+        <view class="tobooking" bindtap='orderin' data-id="{{item.userid}}"> 详情 </view>
         <view class="detail">
           <view class="detail1">
             <view class="start">
 
-              客户名称:<text class="icon-circle s-icon1"> cwt</text></view>
+              客户名称:<text class="icon-circle s-icon1"> {{item.userName}}</text></view>
 
           </view>
           <view class="tags">
             <view>
-              <text class="countleft">电话</text>
+              <text class="countleft">联系方式:{{item.userPhone}}</text>
             </view>
             <view>
               <text class="b-tags js_tags"></text>
@@ -33,6 +35,8 @@
           </view>
         </view>
       </view>
+    </block>
+
     </view>
 
     
