--- a/pages/staffList/staffinfo/staffinfo.wxml
+++ b/pages/staffList/staffinfo/staffinfo.wxml
@@ -12,23 +12,15 @@
       <view class='onid'>
         <view class='inorid'>
 
-          <label class='tex'>订单号:<text>1234567</text></label>
+          <label class='tex'>工人ID:<text>{{fxid}}</text></label>
 
-          <label class='tex'>订单时间:<text>2019-5-21 15:00</text></label>
+            <label class='tex'>工人名称:<text>{{fxame}}</text></label>
 
-          <label class='tex'>用户ID:<text>0001</text></label>
+            <label class='tex'>联系方式:<text>{{fxphe}}</text></label>
 
-          <label class='tex'>用户名称:<text>cwt</text></label>
+            <label class='tex'>工人等级:<text>{{fxgrd}}</text></label>
 
-          <label class='tex'>工人ID:<text>0001</text></label>
-
-          <label class='tex'>工人名称:<text>cwt</text></label>
-
-          <label class='tex'>联系方式:<text>15372095456</text></label>
-
-          <label class='tex'>地址:<text>温州商学院F区 F4-707</text></label>
-
-          <label class='tex'>简介:<text>测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字</text></label>
+            <label class='tex'>简介:<text>{{fxinf}}</text></label>
 
         </view>
       </view>
@@ -39,7 +31,7 @@
   <view class='foot'>
     <view class='footer'>
       <!-- <view class='glbtn' bindtap='glorder'>管理订单</view> -->
-      <view class='dlbtn' bindtap='delorder'>删除工人</view>
+      <view class='dlbtn' bindtap='delorder' data-id="{{fxid}}">删除工人</view>
     </view>
   </view>
 </view>
