--- a/pages/userList/userList.wxss
+++ b/pages/userList/userList.wxss
@@ -1,13 +1,15 @@
 /* pages/orderList/orderList.wxss */
 .page-wrapper {
-    margin: 0;
+    /* margin: 0; */
+    width: 100%;
+    height: 100%;
     font-size: 28rpx;
-    line-height: 1.5;
+    /* line-height: 1.5; */
     color: #333;
-    background-color: #efefef;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
-    -webkit-tap-highlight-color: transparent;
+    background-color: #e5e5e5;
+    /* overflow-x: hidden; */
+    /* -webkit-overflow-scrolling: touch; */
+    /* -webkit-tap-highlight-color: transparent; */
     min-height:2000rpx;
 }
 .admint{
@@ -35,7 +37,7 @@
 .box{
   width: 100%;
   height: 80%;
-  margin-top: 23%;
+  margin-top: 21%;
 }
 
 
