--- a/pages/orderList/orderList.wxss
+++ b/pages/orderList/orderList.wxss
@@ -1,14 +1,22 @@
 /* pages/orderList/orderList.wxss */
+page{
+  width: 100%;
+  height: 100%;
+  background-color: #e5e5e5;
+}
 .page-wrapper {
     margin: 0;
+    height: 100%;
+    width: 100%;
     font-size: 28rpx;
     line-height: 1.5;
     color: #333;
-    background-color: #efefef;
-    overflow-x: hidden;
+    background-color: #e5e5e5;
+    /* overflow-x: hidden; */
     -webkit-overflow-scrolling: touch;
     -webkit-tap-highlight-color: transparent;
-    min-height:2000rpx;
+    min-height:1000rpx;
+    
 }
 
 .admint{
@@ -47,21 +55,51 @@
   height: 30%;
 }
 
-.flexs-item button {
-  height: 32px;
-  box-sizing: border-box;
+.flag-item1 {
+  margin: 0rpx 1% 20rpx 2%;
+  width: 20%;
+  height: 80%;
+  color: #ffffff;
+  border: 1px double #ffffff;
+  float: left;
+  background-color: #222121;
   text-align: center;
-  margin: 10px 0 0 0;
-  min-width: 50px;
-  font-size: 16px;
-  line-height: 32px;
+  /* line-height: 30px;   */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+.flag-item2 {
+  background-color: #ffffff;
+  margin: 0rpx 1% 20rpx 2%;
+  width: 20%;
+  height: 80%;
+  color: #fd8f01;
+  border: 1px double #fd8f01;
+  float: left;
+  text-align: center;
+  /* line-height: 35px;   */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 .box{
   width: 100%;
   height: 65%;
   margin-top: 33%;
+}
+
+
+
+.isRuleShow {
+  opacity: 1;
+}
+ 
+.isRuleHide {
+  opacity: 0;
 }
 
 
@@ -183,11 +221,59 @@
 }
 
 .bus-list .bus-list-item .tags {
-    width: 160rpx;
+    width: 140rpx;
     text-align: right;
     position: absolute;
     right: 0;
     margin-right: 138rpx;
     margin-top: 85rpx;
     top: 0;
+}
+
+.tagin{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.colorDiv-submit{
+  margin-top: 4px;
+  margin-left: 10px;
+  margin-right: 3px;
+  width: 8px;
+  height: 8px;
+  float: left;
+  border-radius: 8px;
+  overflow: hidden;
+  border:2px solid #a5a5a5; 
+  background-color: #e5e5e5;
+}
+
+.colorDiv-ing{
+  margin-top: 4px;
+  margin-left: 10px;
+  margin-right: 3px;
+  width: 8px;
+  height: 8px;
+  float: left;
+  border-radius: 8px;
+  overflow: hidden;
+  border:2px solid #a5a5a5; 
+  background-color: #ffff00;
+}
+
+.colorDiv-final{
+  margin-top: 4px;
+  margin-left: 10px;
+  margin-right: 3px;
+  width: 8px;
+  height: 8px;
+  float: left;
+  border-radius: 8px;
+  overflow: hidden;
+  border:2px solid #a5a5a5; 
+  background-color: #65d665;
 }
