--- a/pages/orderList/orderinfo/orderinfo.wxml
+++ b/pages/orderList/orderinfo/orderinfo.wxml
@@ -12,23 +12,25 @@
       <view class='onid'>
         <view class='inorid'>
 
-          <label class='tex'>订单号:<text>1234567</text></label>
+          <label class='tex'>订单号:<text>{{employid}}</text></label>
 
-          <label class='tex'>订单时间:<text>2019-5-21 15:00</text></label>
+          <label class='tex'>订单时间:<text>{{employtime}}</text></label>
 
-          <label class='tex'>用户ID:<text>0001</text></label>
+          <label class='tex'>用户ID:<text>{{userid}}</text></label>
 
-          <label class='tex'>用户名称:<text>cwt</text></label>
+          <label class='tex'>用户名称:<text>{{usame}}</text></label>
 
-          <label class='tex'>工人ID:<text>0001</text></label>
+          <label class='tex'>用户电话:<text>{{usphe}}</text></label>
 
-          <label class='tex'>工人名称:<text>cwt</text></label>
+          <label class='tex'>工人ID:<text>{{fixid}}</text></label>
 
-          <label class='tex'>联系方式:<text>15372095456</text></label>
+          <label class='tex'>工人名称:<text>{{fxame}}</text></label>
 
-          <label class='tex'>地址:<text>温州商学院F区 F4-707</text></label>
+          <label class='tex'>工人电话:<text>{{fxphe}}</text></label>
 
-          <label class='tex'>简介:<text>测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字测试文字</text></label>
+          <label class='tex'>地址:<text>{{employadd}}</text></label>
+
+          <label class='tex'>简介:<text>{{employinfo}}</text></label>
 
         </view>
       </view>
@@ -37,9 +39,16 @@
   </view> 
 
   <view class='foot'>
-    <view class='footer'>
-      <view class='glbtn' bindtap='glorder'>管理订单</view>
-      <view class='dlbtn' bindtap='delorder'>删除订单</view>
+    <view class='footer' wx:if="{{employstatus == 0}}">
+        <view class='glbtn' bindtap='glorder' data-eid='{{employid}}' data-sta="{{employstatus}}">管理订单</view>
+        <view class='dlbtn' bindtap='delorder' data-id="{{employid}}">删除订单</view>
+    </view>
+    <view class='footer' wx:elif="{{employstatus == 1}}">
+        <view class='glbtn' bindtap='glorder' data-eid='{{employid}}' data-sta="{{employstatus}}">完成订单</view>
+        <view class='dlbtn' bindtap='delorder' data-id="{{employid}}">删除订单</view>
+    </view>
+    <view class='footer' wx:elif="{{employstatus == 2}}">
+        <view class='dlbtn2' bindtap='delorder' data-id="{{employid}}">删除订单</view>
     </view>
   </view>
 </view>
