--- a/pages/orderList/orderinfo/assorder/assorder.wxss
+++ b/pages/orderList/orderinfo/assorder/assorder.wxss
@@ -19,38 +19,10 @@
   top:0;
   
 }
-.ab{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-}
 .a{
-  width: 80%;
    display: flex;
-   /* line-height: 150rpx; */
-   align-items: center;
-   justify-content: center;
-}
-.b{
-  width: 20%;
-  display: flex;
-   /* line-height: 150rpx; */
-   align-items: center;
-   justify-content: center;
-   /* font-size: 20px; */
-   color: #ffffff;
-   /* box-shadow: 3px 3px 3px 3px #ffffff inset, */
-}
-.c{
-  display: flex;
    line-height: 150rpx;
-   align-items: center;
    justify-content: center;
-   font-size: 150%;
-   width: 80%;
-   height: 80%;
-   border: 1px solid #ffffff;
 }
 .lab{
   display: flex;
@@ -107,17 +79,33 @@
  left: 0;
  width: 138rpx;
  height: 100rpx;
- line-height: 20px;
- margin: 60rpx 0;
+ line-height: 50px;
+ margin: 30rpx 0;
  color: #333333;
  text-align: center;
- font-size: 11px;
+ font-size: 18px;
  font-family: Arial;
  border-right: 2rpx dashed #e5e5e5;
 }
 
 .bus-list .bus-list-item .tobooking {
  background-color: #333333;
+ position: absolute;
+ right: 120rpx;
+ width: 120rpx;
+ height: 160rpx;
+ line-height: 160rpx;
+ text-align: center;
+ color: #fff;
+ font-size: 30rpx;
+ /* font-weight: bold; */
+}
+.bus-list .bus-list-item.disabled .tobooking {
+  background-color: #c5c5c5;
+}
+
+.bus-list .bus-list-item .towant {
+ background-color: #fd8f01;
  position: absolute;
  right: 0;
  width: 120rpx;
@@ -129,14 +117,12 @@
  /* font-weight: bold; */
 }
 
-.bus-list .bus-list-item.disabled .tobooking {
-  background-color: #c5c5c5;
-}
+
 
 .bus-list .bus-list-item .detail {
  height: 80rpx;
  padding: 36rpx 0;
- margin: 0 140rpx 0 144rpx;
+ margin: 0 200rpx 0 144rpx;
 }
 
 .bus-list .bus-list-item .detail  .sub-list{
@@ -185,10 +171,10 @@
 }
 
 .bus-list .bus-list-item .tags {
-    width: 400rpx;
+    width: 450rpx;
     text-align: right;
     position: absolute;
-    right: 0;
+    left: 0;
     margin-right: 138rpx;
     margin-top: 85rpx;
     top: 0;
