--- a/pages/orderList/orderinfo/orderinfo.wxss
+++ b/pages/orderList/orderinfo/orderinfo.wxss
@@ -86,3 +86,10 @@ page{
   text-align: center;
   background-color: #b80404
 }
+.dlbtn2{
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  text-align: center;
+  background-color: #b80404
+}
