--- a/pages/admin/admin.wxss
+++ b/pages/admin/admin.wxss
@@ -49,6 +49,7 @@ page{
 .all{
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 80%;
   height: 100%;
   
@@ -94,7 +95,7 @@ page{
   display: flex;
   margin-top: 10px;
   width: 100%;
-  height: 40px;
+  height: 15%;
   font-size: 14px;
   align-items: center;
   /* font-weight: bold; */
